--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "project-12",
   "version": "0.0.1",
   "description": "yandex-praktikum",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "test"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "Peter Tolkachev",
   "license": "ISC",
@@ -13,6 +14,9 @@
   },
   "dependencies": {
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0"
+    "eslint-plugin-import": "^2.22.0",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "fs.promises": "^0.1.2"
   }
 }
