--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "author": "Peter Tolkachev",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^7.9.0"
+    "eslint": "^7.9.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0"
   },
   "dependencies": {
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "fs.promises": "^0.1.2"
