fix eslintrc rules

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "fs.promises": "^0.1.2"
+    "fs.promises": "^0.1.2",
+    "mongoose": "^5.10.7"
   }
 }
