--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "fs.promises": "^0.1.2",
-    "mongoose": "^5.10.7"
+    "mongoose": "^5.10.7",
+    "mongoose-validator": "^2.1.0"
   }
 }
