--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-import": "^2.22.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "fs.promises": "^0.1.2",
