--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs": "0.0.1-security",
     "fs.promises": "^0.1.2",
     "mongoose": "^5.10.7",
-    "mongoose-validator": "^2.1.0"
+    "mongoose-validator": "^2.1.0",
+    "validator": "^13.1.17"
   }
 }
