--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "project-15",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "description": "yandex-praktikum",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node ./dist/app.js",
+    "build": "tsc",
+    "dev": "nodemon ./src/app.ts",
+    "lint": "eslint --config .eslintrc.js --fix .",
+    "clean": "rm -rf dist"
   },
   "author": "Peter Tolkachev",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.0.3",
     "eslint": "^7.11.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
